--- a/build.gradle
+++ b/build.gradle
@@ -21,7 +21,7 @@ buildscript {
 
     dependencies {
         classpath 'net.minecraftforge.gradle:ForgeGradle:1.2-SNAPSHOT'
-        classpath 'de.sanandrew.core:SAPManagerPack:1.7.10-2.5.1-deobf'
+        classpath 'de.sanandrew.core:SAPManagerPack:1.7.10-2.6.0-deobf'
         classpath 'codechicken:CodeChickenCore:1.7.10-1.0.7.46:dev'
         classpath 'codechicken:CodeChickenLib:1.7.10-1.1.3.138:dev'
         classpath 'codechicken:NotEnoughItems:1.7.10-1.0.5.110:dev'
@@ -42,7 +42,7 @@ group = "de.sanandrew.mods"
 archivesBaseName = "TurretMod"
 
 minecraft {
-    version = "1.7.10-10.13.3.1401-1710ls"
+    version = "1.7.10-10.13.4.1448-1.7.10"
     runDir = "minecraft"
 }
 
@@ -79,7 +79,7 @@ repositories {
 }
 
 dependencies {
-    compile 'de.sanandrew.core:SAPManagerPack:1.7.10-2.5.1-deobf'
+    compile 'de.sanandrew.core:SAPManagerPack:1.7.10-2.6.0-deobf'
     compile 'codechicken:CodeChickenCore:1.7.10-1.0.7.46:dev'
     compile 'codechicken:CodeChickenLib:1.7.10-1.1.3.138:dev'
     compile 'codechicken:NotEnoughItems:1.7.10-1.0.5.110:dev'
