--- a/build.gradle
+++ b/build.gradle
@@ -11,7 +11,7 @@ buildscript {
         }
         maven {
             name = 'SAPManagerPack'
-            url = 'https://github.com/SanAndreasP/SAPManagerPack/raw/master/maven-repo/'
+            url = 'https://github.com/SanAndreasP/SAPManagerPack/raw/master/maven-repo-2/'
         }
         maven {
             name = 'CodeChicken'
@@ -21,7 +21,7 @@ buildscript {
 
     dependencies {
         classpath 'net.minecraftforge.gradle:ForgeGradle:1.2-SNAPSHOT'
-        classpath 'de.sanandrew.core:SAPManagerPack:1.7.10-2.6.0-deobf'
+        classpath 'de.sanandrew.core:SAPManagerPack:1.7.10-2.6.0.2:dev'
         classpath 'codechicken:CodeChickenCore:1.7.10-1.0.7.46:dev'
         classpath 'codechicken:CodeChickenLib:1.7.10-1.1.3.138:dev'
         classpath 'codechicken:NotEnoughItems:1.7.10-1.0.5.110:dev'
@@ -70,7 +70,7 @@ sourceSets {
 repositories {
     maven {
         name = 'SAPManPack'
-        url = 'https://github.com/SanAndreasP/SAPManagerPack/raw/master/maven-repo/'
+        url = 'https://github.com/SanAndreasP/SAPManagerPack/raw/master/maven-repo-2/'
     }
     maven {
         name = 'CodeChicken'
@@ -79,7 +79,7 @@ repositories {
 }
 
 dependencies {
-    compile 'de.sanandrew.core:SAPManagerPack:1.7.10-2.6.0-deobf'
+    compile 'de.sanandrew.core:SAPManagerPack:1.7.10-2.6.0.2:dev'
     compile 'codechicken:CodeChickenCore:1.7.10-1.0.7.46:dev'
     compile 'codechicken:CodeChickenLib:1.7.10-1.1.3.138:dev'
     compile 'codechicken:NotEnoughItems:1.7.10-1.0.5.110:dev'
