--- a/build.gradle
+++ b/build.gradle
@@ -24,14 +24,14 @@ idea {
     }
 }
 
-version = "1.9.4-4.0.0-alpha.2"
+version = "1.9.4-4.0.0-alpha.3"
 group = "de.sanandrew.mods"
 archivesBaseName = "TurretMod"
 
 minecraft {
-    version = "1.9.4-12.17.0.1968"
+    version = "1.10-12.18.0.1997-1.10.0"
     runDir = "minecraft"
-	mappings = "snapshot_20160619"
+	mappings = "snapshot_20160625"
 }
 
 setupDecompWorkspace.finalizedBy downloadBookshelf
