--- a/build.gradle
+++ b/build.gradle
@@ -22,9 +22,12 @@ idea {
     module {
         inheritOutputDirs = true
     }
+    project {
+        languageLevel = '1.8' //due to a bug in gradle or IDEA, this doesn't work :(
+    }
 }
 
-version = "1.10-4.0.0-alpha.5"
+version = "1.10-4.0.0-alpha.6"
 group = "de.sanandrew.mods"
 archivesBaseName = "TurretMod"
 
@@ -56,15 +59,13 @@ sourceSets {
 }
 
 dependencies {
-    //compile 'codechicken:CodeChickenCore:1.7.10-1.0.7.46:dev'
-    //compile 'codechicken:CodeChickenLib:1.7.10-1.1.3.138:dev'
-    //compile 'codechicken:NotEnoughItems:1.7.10-1.0.5.110:dev'
+
 }
 
 sourceCompatibility = JavaVersion.VERSION_1_8
 targetCompatibility = JavaVersion.VERSION_1_8
 
-task srcJar(type: Jar) {
+sourceJar {
     from sourceSets.main.java
     appendix = 'src'
     archiveName = "${baseName}-${version}-${appendix}.jar"
@@ -82,7 +83,7 @@ configurations {
 
 artifacts {
     archives deobfJar
-    archives srcJar
+    archives sourceJar
     archives jar
 //    deployDev deobfJar
 }
