--- a/build.gradle
+++ b/build.gradle
@@ -13,8 +13,8 @@ buildscript {
 apply plugin: 'net.minecraftforge.gradle.forge'
 
 task downloadBookshelf(type: LibDownloader) {
-	sourceUrl = 'http://minecraft.curseforge.com/projects/bookshelf/files/2308413/download'
-    target = file('libs/Bookshelf2.jar')
+	sourceUrl = 'http://minecraft.curseforge.com/projects/bookshelf/files/2317799/download'
+    target = file('libs/Bookshelf.jar')
 }
 
 apply plugin: 'idea'
@@ -32,9 +32,9 @@ group = "de.sanandrew.mods"
 archivesBaseName = "TurretMod"
 
 minecraft {
-    version = "1.10-12.18.0.1997-1.10.0"
+    version = "1.10.2-12.18.1.2026"
     runDir = "minecraft"
-	mappings = "snapshot_20160625"
+	mappings = "snapshot_20160724"
 }
 
 setupDecompWorkspace.finalizedBy downloadBookshelf
