--- a/build.gradle
+++ b/build.gradle
@@ -22,7 +22,7 @@ idea {
     }
 }
 
-version = "1.10-4.0.0-alpha.6"
+version = "1.10.2-4.0.0-beta.1"
 group = "de.sanandrew.mods"
 archivesBaseName = "TurretMod"
 
