--- a/src/main/resources/assets/sapturretmod/recipes_sapturretmod/electrolytegen/apple.json
+++ b/src/main/resources/assets/sapturretmod/recipes_sapturretmod/electrolytegen/apple.json
@@ -5,7 +5,7 @@
   "effectiveness": 1.3,
   "timeProcessing": 220,
   "trash": {
-    "item": "minecraft:sugar"
+    "item": "minecraft:wheat_seeds"
   },
   "treasure": {
     "item": "minecraft:gold_nugget"
