made SanLib a submodule

--- a/build.gradle
+++ b/build.gradle
@@ -46,12 +46,13 @@ repositories {
 		name = "CurseForge"
 		url = "https://minecraft.curseforge.com/api/maven/"
 	}
+    maven { url = "http://maven.mcmoddev.com" }
 }
 
 dependencies {
+    compile project(":SanLib")
     deobfCompile "mezz.jei:jei_1.12.2:4.8.5.147:api"
     runtime "mezz.jei:jei_1.12.2:4.8.5.147"
-    deobfCompile "sanlib:SanLib:1.12.2:1.4.4"
     deobfCompile "the-one-probe:theoneprobe:1.12:1.4.19"
 }
 
