--- a/build.gradle
+++ b/build.gradle
@@ -32,7 +32,7 @@ compileJava {
 }
 
 minecraft {
-    version = "1.12.2-14.23.2.2611"
+    version = "1.12.2-14.23.4.2747"
     runDir = "run"
     mappings = "snapshot_20180301"
 }
@@ -70,13 +70,14 @@ processResources {
     }
 
     from(sourceSets.main.resources.srcDirs) {
-        exclude 'mcmod.info'
+        exclude 'mcmod.info', '**/*.psd'
     }
 
     rename '(.+_at.cfg)', 'META-INF/$1'
 }
 
 jar {
+    exclude "**/*.psd"
     manifest {
         attributes 'FMLAT': 'turretmodrebirth_at.cfg'
     }
