--- a/src/main/resources/assets/sapturretmod/recipes_sapturretmod/assembly/upg_shield_projectile.json
+++ b/src/main/resources/assets/sapturretmod/recipes_sapturretmod/assembly/upg_shield_projectile.json
@@ -9,10 +9,7 @@
       "showTooltipText": true,
       "items": [
         {
-          "item": "sapturretmod:turret_upgrade",
-          "nbt": {
-            "upgradeId": "00000000-0000-0000-0000-000000000000"
-          }
+          "item": "sapturretmod:upgrade.empty"
         }
       ]
     },
@@ -35,10 +32,7 @@
     }
   ],
   "result": {
-    "item": "sapturretmod:turret_upgrade",
-    "count": 1,
-    "nbt": {
-      "upgradeId": "ab5e19f9-c241-4f3c-b04e-6c276369b0cf"
-    }
+    "item": "sapturretmod:upgrade.shield.projectile",
+    "count": 1
   }
 }
