--- a/src/main/resources/assets/sapturretmod/sapturretmod/recipes/electrolytegen/apple.json
+++ b/src/main/resources/assets/sapturretmod/sapturretmod/recipes/electrolytegen/apple.json
@@ -1,10 +1,10 @@
 {
   "type": "sapturretmod:electrolytes",
-  "electrolytes": {
+  "electrolyte": {
     "item": "minecraft:apple"
   },
-  "effectiveness": 1.3,
-  "timeProcessing": 220,
+  "efficiency": 1.3,
+  "ticksProcessing": 220,
   "trash": {
     "item": "minecraft:wheat_seeds"
   },
