--- a/src/main/resources/turretmodrebirth_at.cfg
+++ b/src/main/resources/turretmodrebirth_at.cfg
@@ -1,1 +1,2 @@
 public net.minecraft.world.Explosion field_77280_f #size
+public net.minecraft.client.renderer.EntityRenderer field_78513_d #lightmapTexture
