* fixed PageNavigation label flickering  * turrets sync their entire target list to the client now on spawn data  * TCU target GUIs now only send necessary data back to the client, eg only the toggled entity instead of all enabled entities  * re-added player target GUI to TCU

--- a/gradle/wrapper/gradle-wrapper.properties
+++ b/gradle/wrapper/gradle-wrapper.properties
@@ -1,6 +1,6 @@
-#Wed Dec 21 14:04:39 CET 2016
+#Mon Jan 13 16:37:26 CET 2020
+distributionUrl=https\://services.gradle.org/distributions/gradle-4.2-all.zip
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
-zipStoreBase=GRADLE_USER_HOME
 zipStorePath=wrapper/dists
-distributionUrl=https\://services.gradle.org/distributions/gradle-4.2-bin.zip
+zipStoreBase=GRADLE_USER_HOME
