--- a/build.gradle
+++ b/build.gradle
@@ -39,9 +39,14 @@ minecraft {
 
 repositories {
     mavenCentral()
-	maven {
+	maven { // location of the maven that hosts JEI files
+        name = "Progwml6"
 		url = "http://dvs1.progwml6.com/files/maven"
 	}
+    maven { // location of a maven mirror for JEI files, as a fallback
+        name = "ModMaven"
+        url = "https://modmaven.k-4u.nl"
+    }
     maven { // TOP
         name 'tterrag maven'
         url "https://maven.tterrag.com/"
