--- a/src/main/resources/assets/sapturretmod/item_order.cfg
+++ b/src/main/resources/assets/sapturretmod/item_order.cfg
@@ -24,6 +24,7 @@ sapturretmod:ammo.fueltank
 sapturretmod:assembly_upg_auto
 sapturretmod:assembly_upg_speed
 sapturretmod:assembly_upg_filter
+sapturretmod:assembly_upg_redstone
 sapturretmod:upgrade.empty
 sapturretmod:upgrade.health.1
 sapturretmod:upgrade.health.2
@@ -54,6 +55,7 @@ sapturretmod:turret_control_unit
 sapturretmod:turret_info
 sapturretmod:turret_assembly
 sapturretmod:electrolyte_generator
+sapturretmod:turret_crate
 
 # repair kits
 sapturretmod:repkit.standard.1
