* added Harpoon Turret item model  * ResourceOrderer now checks for the Item class after sorting by name, useful for when the item namespace is not in the ResourceOrderer list

--- a/src/main/resources/assets/sapturretmod/item_order.cfg
+++ b/src/main/resources/assets/sapturretmod/item_order.cfg
@@ -1,6 +1,7 @@
 # turrets
 sapturretmod:turret.crossbow
 sapturretmod:turret.shotgun
+sapturretmod:turret.harpoon
 sapturretmod:turret.cryolator
 sapturretmod:turret.revolver
 sapturretmod:turret.minigun
@@ -11,6 +12,7 @@ sapturretmod:turret.flamethrower
 # ammo
 sapturretmod:ammo.arrow
 sapturretmod:ammo.shotgunshell
+sapturretmod:ammo.harpoon
 sapturretmod:ammo.cryocell.1
 sapturretmod:ammo.cryocell.2
 sapturretmod:ammo.cryocell.3
@@ -19,6 +21,7 @@ sapturretmod:ammo.minigunshell
 sapturretmod:ammo.eleccell
 sapturretmod:ammo.fluxcell
 sapturretmod:ammo.fueltank
+sapturretmod:ammo.cartridge
 
 # upgrades
 sapturretmod:assembly_upg_auto
