--- a/build.gradle
+++ b/build.gradle
@@ -64,7 +64,7 @@ dependencies {
     runtime "mezz.jei:jei_1.12.2:4.8.5.147"
     deobfCompile("mcjty.theoneprobe:TheOneProbe-1.12:1.12-1.4.19-11") { transitive = false }
     deobfCompile "de.sanandrew.mods:SanLib:1.12.2-1.6.0"
-    compile "vazkii.patchouli:Patchouli:1.0-20.108"
+    deobfCompile "vazkii.patchouli:Patchouli:1.0-20.108"
 }
 
 processResources {
