* Forcefield Turret now tries to push projectiles away before killing them after a second, if they're still inside the forcefield  * altered death message for Revolver Turret victims  * added Turret Safe Upgrade entry  * added Shield Explosion Absorber Upgrade entry  * added Shield Amplifier Upgrades entry  * added Personal Shield Upgrade entry

--- a/src/main/resources/assets/sapturretmod/patchouli_books/turret_lexicon/en_us/entries/upgrades/shield_projectile.json
+++ b/src/main/resources/assets/sapturretmod/patchouli_books/turret_lexicon/en_us/entries/upgrades/shield_projectile.json
@@ -1,5 +1,5 @@
 {
-  "name": "Projectile Deflector",
+  "name": "Shield Projectile Deflector",
   "icon": "sapturretmod:upgrade.shield.projectile",
   "category": "sapturretmod:upgrades",
   "pages": [
@@ -7,7 +7,7 @@
       "type": "sapturretmod:upgrade_info",
       "name": "Projectile Deflector",
       "item": "sapturretmod:upgrade.shield.projectile",
-      "text": "Augments the $(l:turrets/forcefield)Forcefield Turret$(/l) and allows its shield to absorb incoming enemy projectiles. Each projectile absorbed does 0.5 points of damage to the shield."
+      "text": "Augments the $(l:turrets/forcefield)Forcefield Turret$(/l) and allows its shield to push incoming enemy projectiles away. If the projectile gets stuck in the shield, it will be absorbed after a second.$(br2)Each projectile pushed/absorbed does 0.5 points of damage to the shield."
     },
     {
       "type": "sapturretmod:turret_assembly_i18n",
