--- a/src/main/resources/assets/sapturretmod/patchouli_books/turret_lexicon/en_us/entries/upgrades/shield_projectile.json
+++ b/src/main/resources/assets/sapturretmod/patchouli_books/turret_lexicon/en_us/entries/upgrades/shield_projectile.json
@@ -11,7 +11,7 @@
     },
     {
       "type": "sapturretmod:turret_assembly_i18n",
-      "recipe": "sapturretmod:upg_shield_projectile"
+      "recipe": "sapturretmod:upgrades/shield_projectile"
     }
   ]
 }
