--- a/src/main/resources/assets/sapturretmod/models/item/upgrades/upgrade_shield_projectile.json
+++ b/src/main/resources/assets/sapturretmod/models/item/upgrades/upgrade_shield_projectile.json
@@ -2,6 +2,6 @@
   "parent": "item/generated",
   "textures": {
     "layer0": "sapturretmod:items/upgrades/backg",
-    "layer1": "sapturretmod:items/upgrades/shield.projectile"
+    "layer1": "sapturretmod:items/upgrades/shield_projectile"
   }
 }
