--- a/build.gradle
+++ b/build.gradle
@@ -22,7 +22,7 @@ idea {
     }
 }
 
-version = "1.12-4.0.0-beta.4"
+version = "1.12-4.0.0-beta.4.1"
 group = "de.sanandrew.mods"
 archivesBaseName = "TurretMod"
 String[] excludes = ["**/*.psd", "**/*.bbmodel", "**/*.ps1"];
@@ -40,7 +40,7 @@ minecraft {
 
 repositories {
     mavenCentral()
-    maven { url 'https://maven.blamejared.com' } // Patchouli
+    maven { url 'https://maven.blamejared.com' } // Patchouli & CraftTweaker
 	maven { // location of the maven that hosts JEI files
         name = "Progwml6"
 		url = "http://dvs1.progwml6.com/files/maven"
@@ -63,8 +63,9 @@ dependencies {
     deobfCompile "mezz.jei:jei_1.12.2:4.8.5.147:api"
     runtime "mezz.jei:jei_1.12.2:4.8.5.147"
     deobfCompile("mcjty.theoneprobe:TheOneProbe-1.12:1.12-1.4.19-11") { transitive = false }
-    deobfCompile "de.sanandrew.mods:SanLib:1.12.2-1.6.0"
+    deobfCompile "de.sanandrew.mods:SanLib:1.12.2-1.6.1"
     deobfCompile "vazkii.patchouli:Patchouli:1.0-23.6"
+    deobfCompile "CraftTweaker2:CraftTweaker2-MC1120-Main:1.12-4.1.20.618"
 }
 
 processResources {
