--- a/build.gradle
+++ b/build.gradle
@@ -1,116 +1,244 @@
 buildscript {
     repositories {
+        maven { url = 'https://files.minecraftforge.net/maven' }
         jcenter()
-        maven {
-            name = "forge"
-            url = "http://files.minecraftforge.net/maven"
-        }
+        mavenCentral()
     }
     dependencies {
-        classpath 'net.minecraftforge.gradle:ForgeGradle:2.3-SNAPSHOT'
+        classpath group: 'net.minecraftforge.gradle', name: 'ForgeGradle', version: '3.+', changing: true
     }
 }
-apply plugin: 'net.minecraftforge.gradle.forge'
+apply plugin: 'net.minecraftforge.gradle'
+apply plugin: 'eclipse'
+apply plugin: 'maven-publish'
 
-apply plugin: 'idea'
-idea {
-    module {
-        inheritOutputDirs = true
+Object grabConstant = { String name ->
+    name = name.toUpperCase(Locale.ROOT)
+    def f = new File("src/main/java/de/sanandrew/mods/turretmod/api/TmrConstants.java").text
+    def m = f =~ name + /\s*=\s*"(.*?)"/
+    if( m.find() ) {
+        return m.group(1)
+    } else {
+        throw new IllegalArgumentException("Cannot grab constant " + name + "!")
     }
-    project {
-        languageLevel = '1.8' //due to a bug in gradle or IDEA, this doesn't work :(
-    }
-}
+} as Object
 
-version = "1.12-4.0.0-beta.4.4"
+version = grabConstant("BUILD_MCVER") + '-' + grabConstant("VERSION")
 group = "de.sanandrew.mods"
 archivesBaseName = "TurretMod"
-String[] excludes = ["**/*.psd", "**/*.bbmodel", "**/*.ps1"];
+String[] excludes = ["**/*.psd", "**/*.bbmodel", "**/*.ps1"]
 
+//noinspection GroovyUnusedAssignment
 sourceCompatibility = targetCompatibility = "1.8" // Need this here so eclipse task generates correctly.
 compileJava {
     sourceCompatibility = targetCompatibility = "1.8"
+    options.debug = true
+    options.debugOptions.debugLevel = "source,lines,vars"
 }
 
+println('Java: ' + System.getProperty('java.version') + ' JVM: ' + System.getProperty('java.vm.version') + '(' + System.getProperty('java.vendor') + ') Arch: ' + System.getProperty('os.arch'))
 minecraft {
-    version = "1.12.2-14.23.5.2847"
-    runDir = "run"
-    mappings = "snapshot_20180814"
+    // The mappings can be changed at any time, and must be in the following format.
+    // snapshot_YYYYMMDD   Snapshot are built nightly.
+    // stable_#            Stables are built at the discretion of the MCP team.
+    // Use non-default mappings at your own risk. they may not always work.
+    // Simply re-run your setup task after changing the mappings to update your workspace.
+    //noinspection GroovyAssignabilityCheck
+    mappings channel: grabConstant("BUILD_MAPPINGS_CHANNEL"), version: grabConstant("BUILD_MAPPINGS_VERSION")
+    // makeObfSourceJar = false // an Srg named sources jar is made by default. uncomment this to disable.
+    
+    //accessTransformer = file('src/main/resources/META-INF/sanlib_at.cfg')
+
+    // Default run configurations.
+    // These can be tweaked, removed, or duplicated as needed.
+    runs {
+        client {
+            //noinspection GroovyAssignabilityCheck
+            workingDirectory project.file('run')
+
+            // Recommended logging data for a userdev environment
+            property 'forge.logging.markers', 'SCAN,REGISTRIES,REGISTRYDUMP'
+
+            // Recommended logging level for the console
+            property 'forge.logging.console.level', 'debug'
+
+            mods {
+                sanlib {
+                    //noinspection GroovyAssignabilityCheck
+                    source sourceSets.main
+                }
+            }
+        }
+
+        server {
+            //noinspection GroovyAssignabilityCheck
+            workingDirectory project.file('run')
+
+            // Recommended logging data for a userdev environment
+            property 'forge.logging.markers', 'SCAN,REGISTRIES,REGISTRYDUMP'
+
+            // Recommended logging level for the console
+            property 'forge.logging.console.level', 'debug'
+
+            mods {
+                sanlib {
+                    //noinspection GroovyAssignabilityCheck
+                    source sourceSets.main
+                }
+            }
+        }
+
+        data {
+            //noinspection GroovyAssignabilityCheck
+            workingDirectory project.file('run')
+
+            // Recommended logging data for a userdev environment
+            property 'forge.logging.markers', 'SCAN,REGISTRIES,REGISTRYDUMP'
+
+            // Recommended logging level for the console
+            property 'forge.logging.console.level', 'debug'
+
+            // Specify the modid for data generation, where to output the resulting resource, and where to look for existing resources.
+            //noinspection GroovyAssignabilityCheck
+            args '--mod', grabConstant("ID"), '--all', '--output', file('src/generated/resources/'), '--existing', file('src/main/resources/')
+
+            mods {
+                sanlib {
+                    //noinspection GroovyAssignabilityCheck
+                    source sourceSets.main
+                }
+            }
+        }
+    }
+}
+
+// Include resources generated by data generators.
+sourceSets.main.resources {
+    srcDir 'src/generated/resources'
 }
 
 repositories {
-    mavenCentral()
-    maven { url 'https://maven.blamejared.com' } // Patchouli & CraftTweaker
-	maven { // location of the maven that hosts JEI files
-        name = "Progwml6"
-		url = "http://dvs1.progwml6.com/files/maven"
+    maven { url 'https://maven.blamejared.com' }
+	maven {
+		// location of the maven that hosts JEI files
+		name = "Progwml6 maven"
+		url = "https://dvs1.progwml6.com/files/maven/"
 	}
-    maven { // location of a maven mirror for JEI files, as a fallback
-        name = "ModMaven"
-        url = "https://modmaven.k-4u.nl"
-    }
+	maven {
+		// location of a maven mirror for JEI files, as a fallback
+		name = "ModMaven"
+		url = "https://modmaven.k-4u.nl"
+	}
     maven { // TOP
         name 'tterrag maven'
         url "https://maven.tterrag.com/"
     }
     maven {
         name = "SanLib"
-        url = "https://github.com/SanAndreasP/SanLib/raw/1.12/maven/"
+        url = "https://github.com/SanAndreasP/SanLib/raw/1.16/maven/"
     }
 }
 
 dependencies {
-    deobfCompile "mezz.jei:jei_1.12.2:4.8.5.147:api"
-    runtime "mezz.jei:jei_1.12.2:4.8.5.147"
-    deobfCompile("mcjty.theoneprobe:TheOneProbe-1.12:1.12-1.4.19-11") { transitive = false }
-    deobfCompile "de.sanandrew.mods:SanLib:1.12.2-1.6.1"
-    deobfCompile "vazkii.patchouli:Patchouli:1.0-23.6"
-    deobfCompile "CraftTweaker2:CraftTweaker2-MC1120-Main:1.12-4.1.20.618"
+    // Specify the version of Minecraft to use, If this is any group other then 'net.minecraft' it is assumed
+    // that the dep is a ForgeGradle 'patcher' dependency. And it's patches will be applied.
+    // The userdev artifact is a special name and will get all sorts of transformations applied to it.
+    //noinspection GroovyAssignabilityCheck
+    minecraft 'net.minecraftforge:forge:' + grabConstant("BUILD_FORGEVER")
+
+    // You may put jars on which you depend on in ./libs or you may define them like so..
+    // compile "some.group:artifact:version:classifier"
+    // compile "some.group:artifact:version"
+
+    // Real examples
+    // compile 'com.mod-buildcraft:buildcraft:6.0.8:dev'  // adds buildcraft to the dev env
+    // compile 'com.googlecode.efficient-java-matrix-library:ejml:0.24' // adds ejml to the dev env
+
+    // The 'provided' configuration is for optional dependencies that exist at compile-time but might not at runtime.
+    // provided 'com.mod-buildcraft:buildcraft:6.0.8:dev'
+
+    // These dependencies get remapped to your current MCP mappings
+    // deobf 'com.mod-buildcraft:buildcraft:6.0.8:dev'
+
+    // For more info...
+    // http://www.gradle.org/docs/current/userguide/artifact_dependencies_tutorial.html
+    // http://www.gradle.org/docs/current/userguide/dependency_management.html
+	
+	compileOnly fg.deobf("mcjty.theoneprobe:TheOneProbe-1.16:1.16-3.0.7-13:api")
+	runtimeOnly fg.deobf("mcjty.theoneprobe:TheOneProbe-1.16:1.16-3.0.7-13")
+	compileOnly fg.deobf("mezz.jei:jei-1.16.4:7.6.1.71:api")
+	runtimeOnly fg.deobf("mezz.jei:jei-1.16.4:7.6.1.71")
+    compileOnly fg.deobf("vazkii.patchouli:Patchouli:1.16.4-50:api")
+    runtimeOnly fg.deobf("vazkii.patchouli:Patchouli:1.16.4-50")
+	compile fg.deobf("de.sanandrew.mods:SanLib:1.16.4-2.0.0")
+
 }
 
 processResources {
-    inputs.property "version", project.version
-    inputs.property "mcversion", project.minecraft.version
-
     from(sourceSets.main.resources.srcDirs) {
-        include 'mcmod.info'
-
-        expand 'version':project.version, 'mcversion':project.minecraft.version
+        include 'META-INF/mods.toml'
+        expand 'version': grabConstant("VERSION"),
+               'name': grabConstant("NAME")
     }
 
     from(sourceSets.main.resources.srcDirs) {
-        exclude 'mcmod.info'
+        exclude 'META-INF/mods.toml'
     }
-
-    rename '(.+_at.cfg)', 'META-INF/$1'
 }
 
+// Example for how to get properties into the manifest for reading by the runtime..
 jar {
     exclude(excludes)
     manifest {
-        attributes 'FMLAT': 'turretmodrebirth_at.cfg'
+        attributes([
+            "Specification-Title": grabConstant("ID"),
+            "Specification-Vendor": "SanAndreasP",
+            "Specification-Version": "1", // We are version 1 of ourselves
+            "Implementation-Title": grabConstant("ID"),
+            "Implementation-Version": "${version}",
+            "Implementation-Vendor" :"SanAndreasP",
+            "Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ")
+        ])
     }
 }
 
-sourceJar {
-    from sourceSets.main.java
-    exclude(excludes)
-    appendix = 'src'
-    archiveName = "${baseName}-${version}-${appendix}.jar"
-}
+// Example configuration to allow publishing using the maven-publish task
+// This is the preferred method to reobfuscate your jar file
+jar.finalizedBy('reobfJar') 
+// However if you are in a multi-project build, dev time needs unobfed jar files, so you can delay the obfuscation until publishing by doing
+//publish.dependsOn('reobfJar')
 
-task deobfJar(type: Jar) {
-    from sourceSets.main.output
-    exclude(excludes)
-    appendix = 'deobf'
-    archiveName = "${baseName}-${version}-${appendix}.jar"
-    manifest {
-        attributes 'FMLAT': 'turretmodrebirth_at.cfg'
+publishing {
+    publications {
+        //noinspection GroovyAssignabilityCheck
+        mavenJava(MavenPublication) {
+            //noinspection GroovyAssignabilityCheck
+            artifactId = archivesBaseName
+            //noinspection GroovyAssignabilityCheck
+            artifact jar
+        }
+    }
+    repositories {
+        maven {
+            url "file:///${project.projectDir}/maven/"
+        }
     }
 }
 
-artifacts {
-    archives deobfJar
-    archives sourceJar
-    archives jar
+import net.minecraftforge.gradle.common.task.SignJar
+
+task signJar(type: SignJar, dependsOn: jar) {
+    onlyIf {
+        project.hasProperty('keyStore')
+    }
+    //noinspection GroovyAssignabilityCheck
+    keyStore = project.findProperty('keyStore')
+    alias = project.findProperty('keyStoreAlias')
+    storePass = project.findProperty('keyStorePass')
+    keyPass = project.findProperty('keyStoreKeyPass')
+    inputFile = jar.archivePath
+    outputFile = jar.archivePath
 }
+
+build.dependsOn signJar
+build.finalizedBy publish
