Electrolyte Generator fully works again, now using data generators to create its recipes as well

--- a/src/main/resources/data/sapturretmod/recipes/electrolytes/apple_as_electrolyte.json
+++ b/src/main/resources/data/sapturretmod/recipes/electrolytes/apple_as_electrolyte.json
@@ -5,9 +5,11 @@
   },
   "efficiency": 1.3,
   "processTime": 220,
+  "trashChance": 0.2,
   "trashResult": {
     "item": "minecraft:wheat_seeds"
   },
+  "treasureChance": 0.02,
   "treasureResult": {
     "item": "minecraft:gold_nugget"
   }
