--- a/build.gradle
+++ b/build.gradle
@@ -47,7 +47,7 @@ minecraft {
     mappings channel: grabConstant("BUILD_MAPPINGS_CHANNEL"), version: grabConstant("BUILD_MAPPINGS_VERSION")
     // makeObfSourceJar = false // an Srg named sources jar is made by default. uncomment this to disable.
     
-    //accessTransformer = file('src/main/resources/META-INF/sanlib_at.cfg')
+    accessTransformer = file('src/main/resources/META-INF/accesstransformer.cfg')
 
     // Default run configurations.
     // These can be tweaked, removed, or duplicated as needed.
