fixed creative upgrade not being insertable if there's already an upgrade installed

--- a/build.gradle
+++ b/build.gradle
@@ -176,7 +176,8 @@ publishing {
 
 import net.minecraftforge.gradle.common.tasks.SignJar
 
-task signJar(type: SignJar, dependsOn: jar) {
+tasks.register('signJar', SignJar) {
+    dependsOn jar
     onlyIf {
         project.hasProperty('keyStore')
     }
